trunk/Archive2/ee/3e0daa448f5522/output
main.cpp:17:7: error: assigning to 'int' from incompatible type 'S'
    a = b;
      ^ ~
1 error generated.
